--- a/dcc.html
+++ b/dcc.html
@@ -52,17 +52,17 @@
                       <a class="nav-link" href="#main" class="selected">Nehal Jain</a>
                   </li>
                   <li class="nav-object">
-                      <a class="nav-link" href=#projects>Work</a>
+                      <a class="nav-link" href="#about" >About</a>
                   </li>
                   <li class="nav-object">
-                      <a class="nav-link" href="about.html">About</a>
+                      <a class="nav-link" href=#projects>Work</a>
                   </li>
               </ul>
       </nav>
         </header>
 >
         <div class="span-12" data-module="image">
-          <div style="margin-top: 50px" class="ce-image" data-align="left"><img class="is-content" src="img/dcc2.jpg" width="100%" alt="HackDavis Banner" caption="" data-width="original" data-scaling="no"></div>
+          <div style="margin-top: 50px" class="ce-image" data-align="left"><img class="is-content" src="img/dcc2.jpg" width="100%" alt="Dseign Careers Club Banner" caption="" data-width="original" data-scaling="no"></div>
         </div>
 
         <div style="padding-top: 60px" id="dccprompt" class="container">
