--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                             <a class="nav-link" href="#main" class="selected">Nehal Jain</a>
                         </li>
                         <li class="nav-object">
-                            <a class="nav-link" href=#projects>Work</a>
+                            <a class="nav-link" href="#about" >About</a>
                         </li>
                         <li class="nav-object">
-                            <a href="about.html" class="nav-link">About</a>
+                            <a class="nav-link" href=#projects>Work</a>
                         </li>
                     </ul>
             </nav>
@@ -69,7 +69,7 @@
             </section>
         </div>
 
-        <!-- <div id="about">
+        <div id="about">
             <section id="about1">
                 <article id="about1a">
                     <img src="img/me.jpeg" alt="My picture" width="400" height="500">
@@ -88,7 +88,7 @@
     
                 </article>
             </section> 
-        </div> -->
+        </div>
 
         <!-- Projects Section -->
         <div id="projects" class="container">
