--- a/dhousing.html
+++ b/dhousing.html
@@ -52,27 +52,28 @@
                       <a class="nav-link" href="#main" class="selected">Nehal Jain</a>
                   </li>
                   <li class="nav-object">
-                      <a class="nav-link" href=#projects>Work</a>
+                      <a class="nav-link" href="#about" >About</a>
                   </li>
                   <li class="nav-object">
-                      <a class="nav-link" href="about.html">About</a>
+                      <a class="nav-link" href=#projects>Work</a>
                   </li>
               </ul>
+      </nav>
       </nav>
         </header>
 >
         <div class="span-12" data-module="image">
-          <div style="margin-top: 50px" class="ce-image" data-align="left"><img class="is-content" src="img/dcc2.jpg" width="100%" alt="HackDavis Banner" caption="" data-width="original" data-scaling="no"></div>
+          <div style="margin-top: 50px" class="ce-image" data-align="left"><img class="is-content" src="img/dhousing1.jpg" width="100%" alt="Davis Housing Banner" caption="" data-width="original" data-scaling="no"></div>
         </div>
 
         <div style="padding-top: 60px" id="dccprompt" class="container">
             <div data-content-for="sm">
               <!-- Summary Section -->
-              <section class="title_header col-12"><h2>Design Careers Club Website</h2></section>
+              <section class="title_header col-12"><h2>Davis Housing Website</h2></section>
               <!-- Summary Section -->
               <div class="clearfix">
                 <section class="col-sm-12">
-                  <img class="float-right" src="img/dcc1.jpg" alt="DCC Web" width="400" height="300">
+                  <img class="float-right" src="img/dhousing.png" alt="Davis Housing Web" width="400" height="300">
                 </section>
 
                 <section class="col-sm-7">
