--- a/cstem.html
+++ b/cstem.html
@@ -46,7 +46,7 @@
     <body>
         <header>
             <!-- Navbar -->
-            <nav id="headernav">
+            <!-- <nav id="headernav">
               <ul>
                   <li class="nav-object">
                       <a class="nav-link" href="#main" class="selected">Nehal Jain</a>
@@ -57,8 +57,15 @@
                   <li class="nav-object">
                       <a class="nav-link" href=#projects>Work</a>
                   </li>
-              </ul>
-      </nav>
+              </ul> -->
+      <!-- </nav> -->
+                <nav id="headernav1">
+                    <ul>
+                        <li class="nav-object"><a class="nav-link" href="index.html#main">Nehal Jain</a></li>
+                        <li class="nav-object"><a class="nav-link" href="index.html#about">About</a></li>
+                        <li class="nav-object"><a class="nav-link" href="index.html#projects">Work</a></li>
+                    </ul>
+                </nav>
         </header>
 >
         <div class="span-12" data-module="image">
