--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
         <div id="main">
-            <div id="cover_image" style="transform:translate3d(0px,8.333333px,0px);"> </div>
+            <div id="cover_image"> </div>
             <div id="header_text" >
                 <h2 style="font-size: 60px;">Hey! <span style="color:#DD876D;">I'm Nehal</span>.</h2>
                 <p>I love people and their stories.</p></div>
@@ -74,7 +74,7 @@
             </div>
             
              <!-- Projects Section -->
-        <div id="projects " class="container">
+        <div id="projects" class="container">
             <div id="projects_header" class="viewport_vertical_top_padding_20   portfolio_section">
             <h3>Projects</h3>
             <div class="container-fluid project_modules">
