--- a/dhousing.html
+++ b/dhousing.html
@@ -61,9 +61,9 @@
       </nav> -->
         <nav id="headernav1">
           <ul>
-              <li class="nav-object"><a class="nav-link" href="index.html#main">Nehal Jain</a></li>
-              <li class="nav-object"><a class="nav-link" href="index.html#projects">Work</a></li>
-              <li class="nav-object"><a class="nav-link" href="index.html#about">About</a></li>
+              <li class="nav-object"><a class="nav-link" href="index#main">Nehal Jain</a></li>
+              <li class="nav-object"><a class="nav-link" href="index#projects">Work</a></li>
+              <li class="nav-object"><a class="nav-link" href="index#about">About</a></li>
           </ul>
       </nav>
         </header>
