--- a/cstem.html
+++ b/cstem.html
@@ -133,7 +133,7 @@
           <div class="step-description">
             The old site’s bad user experience has been a source of frustration for UC Davis students and faculty, so university administrators asked us to explore solutions to the site's problems. We conducted user research and used UC Davis style guides to inform our redesign, and validated our work using a final prototype, which we would present to a group of university stakeholders..
             <div class="step-description-img">
-              <img src="images/JAPA/car-msg-img.png" alt="animated website imagery">
+              <img src="img/cstembreak.png" alt="animated website imagery">
             </div>
 
           </div>
@@ -173,7 +173,7 @@
 				</div>
 		</div>
 		<div class="redesign-banner">
-			<img src="images/JAPA/japa-banner-3.png" alt="CSTEM redesign banner">
+			<img src="img/cstem.png" alt="CSTEM redesign banner">
 		</div>
 </div>
 
@@ -337,6 +337,10 @@
 </div>
 
 <div class="break-down-container">
+  <div class="break-down-heading">
+    <div class="small-text-title">What did I learn?</div>
+    <div class="storyline-title">Reflection</div>
+    <div class="break-down-row">
     <div class="break-down-row">
         <div class="break-down-text">
               <div class="process-heading">The Fun Part: Iterate, Usability Tests, Repeat</div>
@@ -352,7 +356,7 @@
         <div class="process-img">
             <img src="images/JAPA/Prototyping/iterations.png" alt="iterations overview">
         </div>
-    </div></div>
+    </div></div></div></div>
 
     <div class="process-row">
       <a class="back_home" href="index.html"><button type="button" class="btn btn-outline-white back_home_button">Back Home</button></a></div>
