--- a/dhousing.html
+++ b/dhousing.html
@@ -150,7 +150,7 @@
     <div class="text">
       <div class="small-text-title">Current Experience</div>
           <div class="current-experience-title">Why aren't users engaging with the online presence of this service?</div>
-          This is what the current app experience looks like. In this quick demo, we can see that the davis housing website is in desperated need of a redesign. It is wasting important space and not giving any real information but lists of the apartments. Moreover, the current color scheme and logo is off-brand. 
+          This is what the current website experience looks like. In this quick demo, we can see that the davis housing website is in desperated need of a redesign. It is wasting important space and not giving any real information but lists of the apartments. Moreover, the current color scheme and logo is off-brand. 
         </div>
               <div class="current-experience-img">
                 <img src="img/dh.gif" alt="current davis housing experience gif">
@@ -159,7 +159,8 @@
 
   <div class="opportunity-container">
     <div class="small-text-title">Space for opportunity</div>
-    <div class="problem-title">What if we focused on allowing customers to share and communicate their housing options?</div>
+    <div class="problem-title">What if we focused on allowing customers to have an online walk-through experience especially due to COVID?</div>
+    Most housing-listing websites focus on listing housing with amenities and location. Since we wanted to do things a little different, we realized that we can utilize a social feature that allows users to communicate with each other. Moreover, we wanted to expand on this feature by incorporating an online walk-in view of the apartment listings. We encouraged apartments to add 360 photos that would allow users to have a real experience virtually. 
 </div>
 
 
@@ -194,8 +195,7 @@
         <div class="break-down-text">
           <div class="break-down-title">Needs and Personas</div>
           <div class="break-down-description">
-            After inserting, removing, and rearranging pages on the sitemap the team was able to start sketching new website layouts. As we sketched and wireframed, we explored layouts that followed existing common patterns, but also explored new features to give the design an edge.
-            <br>During the wireframing process, we decided that it was important to focus on the social features that allow sharing and reacting. We also incorporated a modern redesign which would reduce their cognitive load. Abiding by stylistic standards was significant to gaining the traction and audience that we wanted.
+            We created user personas based on our user's needs and pain points. We got this data through a survey we distributed using our subscriber list. We emailed the survey to residents and shared the survey in classes so that we could collect varied information. Based on this data, we were able to categorize and group them into following user personas:I
           </div>
         </div>
       </div>
@@ -340,6 +340,10 @@
 </div>
 
 <div class="break-down-container">
+  <div class="break-down-heading">
+    <div class="small-text-title">What did I learn?</div>
+    <div class="storyline-title">Reflection</div>
+    <div class="break-down-row">
     <div class="break-down-row">
         <div class="break-down-text">
               <div class="process-heading">The Fun Part: Iterate, Usability Tests, Repeat</div>
@@ -355,7 +359,7 @@
         <div class="process-img">
             <img src="images/JAPA/Prototyping/iterations.png" alt="iterations overview">
         </div>
-    </div></div>
+    </div></div></div></div>
 
         <!-- Footer -->
         <footer class="footer navbar-light bg-light">
