--- a/cstem.html
+++ b/cstem.html
@@ -186,8 +186,7 @@
 
       <div class="break-down-row">
         <div class="final-gif">
-          <img src="images/JAPA/Prototyping/search-gif.gif" alt="search location gif">
-          <img src="images/JAPA/Prototyping/filterfinal-gif.gif" alt="filter feature gif">
+          <img src="img/cstemsurvey.png" alt="surveyf">
         </div>
 
         <div class="break-down-text">
@@ -205,7 +204,9 @@
         <div class="break-down-text">
           <div class="break-down-title">Users and Personas</div>
           <div class="break-down-description">
-            Macy distributed an internal survey to understand how different stakeholders within the company – engineers, sales, product marketers – felt about search. Both of us conducted an audit and documentation of all the types of objects search surfaces to see what are all the attributes that people could be searching or filtering by
+            To get more understand what these users’ goals and pain points on the site were, we conducted more in-depth interviews where we would walk through the website with 5 people from each user group.
+            The during the interviews we performed a contextual inquity (or walkthrough) of the website with our interviewees to observe how they used the site and what information they wanted to access. We also asked them both preestablished and followup questions about their goals and habits as users.
+            Based off of those interviews, we were able to create personas (who are fictional people with motivations and oppinions that average those of the people interviewed).
           </div>
         </div>
 
@@ -215,38 +216,6 @@
       </div>
 </div>
 
-<div class="break-down-container">
-  <div class="break-down-row">
-    <div class="final-gif">
-      <img src="images/JAPA/Prototyping/driver-safety-gif.gif" alt="driver safety gif">
-    </div>
-
-    <div class="break-down-text">
-      <div class="break-down-title">Exploratory Studies</div>
-      <div class="break-down-description">
-        Macy distributed an internal survey to understand how different stakeholders within the company – engineers, sales, product marketers – felt about search. Both of us conducted an audit and documentation of all the types of objects search surfaces to see what are all the attributes that people could be searching or filtering by
-      </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="break-down-container">
-    <div class="break-down-row">
-      <div class="break-down-text">
-        <div class="break-down-title">Strategy</div>
-        <div class="break-down-description">
-          Search and getting to information are a priority. The majority of users enjoy looking for specifics instead of browsing through all the information. We also wanted to take inspiration from the Davis Housing magazine and use methods from editorial design so that the listings base is a delight to read.
-        <br>
-        <br>
-        To further narrow the search, users can customize their preferences with the filter feature.
-        </div>
-      </div>
-
-      <div class="final-gif">
-        <img src="images/JAPA/Prototyping/quick-look-gif.gif" alt="quick look to list view final gif">
-      </div>
-    </div>
-</div>
 
 <div class="img-break">
 <img src="images/JAPA/mid-section-img.png" alt="japa quote img break">
@@ -271,22 +240,43 @@
               Since the organization of information on the website was an issue brought up in our personas, we wanted to take a look at the persona use cases and see:
               <br><br>1. Where their final page destinations were on the sitemap
               <br>2. What user navigation paths looked 
+              <br>The person icons indicate the ending page for each of the personas' navigation paths.
           </div></div>
         </div>
   </div>
 </div>
 
+<div class="imgg-break">
+  <img src="img/ia-cstem1.png" alt="japa quote img break">
+  </div>
+
+<div class="break-down-container">
+  <div class="break-down-row">
+    <div class="break-down-text">
+      <div class="break-down-description">
+        Our Revised Sitemap
+        <br>We wanted to make sure that all of our personas, especially the parents, could access their information quickly without having to read a lot of text. So we restructured the site to facilitate the access of information from the use cases, (the information that they desired most).
+        <br>Since students are the majority of the user population, we made sure that all of the information that they need is within the “Curriculum” section because that’s where they tend to look first (based off of our interview observations). To do this, we regrouped and added some relevant pages to the section. Previously, the modules required another click but we have made all the information available in two clicks.
+        <br>Moreover, we created a different navigation tab for partners that contains all the information that they would want to access, 
+        <br>Downloads are also available in the first tab which was a special request from the center's stakeholders. 
+        <br>The news and events were also cleanly categorized under one nav tab which allows for a smoother user experience.
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="imgg-break">
+  <img src="img/ia-cstem2.png" alt="japa quote img break">
+  </div>
 
 <div class="break-down-container">
 			<div class="break-down-row">
-				<!-- <div class="final-gif">
-					<img src="images/JAPA/Prototyping/driver-safety-gif.gif" alt="driver safety gif">
-				</div> -->
-
 				<div class="break-down-text">
 					<div class="break-down-title">Wireframes</div>
 					<div class="break-down-description">
-            After inserting, removing, and rearranging pages on the sitemap the team was able to start sketching new website layouts. As we sketched and wireframed, we explored layouts that followed existing common patterns, but also explored new features to give the design an edge.During the wireframing process, we decided that it was important to focus on the social features that allow sharing and reacting. We also incorporated a modern redesign which would reduce their cognitive load. Abiding by stylistic standards was significant to gaining the traction and audience that we wanted.
+            Overall, the information architecture created a cleaner path than the previous website design. This allowed us to move on to wireframing.
+            We created layouts based on user goals and UCD web patterns. After inserting and removing pages, and rearranging pages on the sitemap we were able to start sketching new website layouts. As we sketched and wireframed, we explored layouts that followed existing UC Davis website patterns, but also entertained new ideas that could help the CSTEM website establish its own unique character.
+            During the wireframing process, we decided that using more modern UC Davis website’s design patterns would be the best layout choice for several reasons:
 					</div>
 				</div>
 			</div>
@@ -294,7 +284,20 @@
 
 
 <div class="img-break">
-		<img src="images/JAPA/mid-section-img2.png" alt="japa quote img break2">
+		<img src="img/wire2.png" alt="japa quote img break2">
+</div>
+
+<div class="break-down-container">
+  <div class="break-down-row">
+    <div class="break-down-text">
+      <div class="break-down-description">
+        The website would be consistent with modern UC Davis branding and style guides.
+        The website experience would be consistent with other UC Davis sites; this would reduce users' effort to understand the redesigned site and would reduce their cognitive load.
+        <br>Abiding by stylistic standards is important as the school continues to scale the number of websites that it has.
+        Examples of websites with modern UC Davis patterns would be the UC Davis home page and the UC Davis SISS website.
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="break-down-container">
