--- a/dcc.html
+++ b/dcc.html
@@ -360,8 +360,7 @@
           <div class="break-down-text">
           <div class="break-down-title">Needs & Personas</div>
           <div class="break-down-description">
-            <p>Who are our users?</p>
-                <p>Since the user types are straight forward, we categorized them into 5 user groups:</p>
+                <p>Who are our users? Since the user types are straight forward, we categorized them into 5 user groups:</p>
                 <p><b>Design Students:</b> This website will be used by the students to navigate design workshops, design events and job opportunities. They can also refer to the blog which will have professional articles such as preparing for the events.</p>
                 <p><b>Design Faculty:</b> The design faculty will have a similar goal of being aware of the events. They will also need to be able to get information on alumni and events from the previous years.</p>
                 <p><b>UC Davis Design Alumni:</b> The alumni will be connected to current design students through this website and will initially begin their mentorship program throught the website</p>
@@ -399,8 +398,8 @@
                 <br>Since the organization of information on the website was an issue brought up in our personas, we wanted to take a look at the persona use cases and see:
                 
                 <br>Where their final page destinations were on the sitemap
-                What user navigation paths looked
-                The person icons indicate the ending page for each of the personas' navigation paths.
+                <br>What user navigation paths looked
+                <br> The person icons indicate the ending page for each of the personas' navigation paths.
                 We wanted to make sure that all of our personas, especially the international students, could access their information quickly without having to read a lot of text. So we restructured the site to facilitate the access of information from the use cases, (the information that they desired most).
             </div></div>
         </div>
@@ -428,17 +427,18 @@
 				<div class="break-down-text">
 					<div class="break-down-title">Wireframes</div>
 					<div class="break-down-description">
-            After inserting, removing, and rearranging pages on the sitemap the team was able to start sketching new website layouts. As we sketched and wireframed, we explored layouts that followed existing common patterns, but also explored new features to give the design an edge.
-            <br>During the wireframing process, we decided that it was important to focus on the social features that allow sharing and reacting. We also incorporated a modern redesign which would reduce their cognitive load. Abiding by stylistic standards was significant to gaining the traction and audience that we wanted.
+            We wanted to connect the site's information architecture to its visual design by showing paths between pages. Wireframing aided us in clarifying consistent ways for displaying particular types of information on the user interface. As you can see from the sketches, we explored intended functionality in the interface and worked on different landing pages. Our main focus was on the home page because there isn't a lot of information so we wanted to gain and keep attention for the users to be able to reach the destination they wanted.
 					</div>
 				</div>
 			</div>
 </div>
 
-<!-- 
+
 <div class="img-break">
-		<img src="images/JAPA/mid-section-img2.png" alt="japa quote img break2">
-</div> -->
+	  <!-- <img src="img/wiredcc.jpg" alt="wireframe 2">
+    <img src="img/wiredcc2.png" alt="wireframe 2">
+    <img src="img/wiredcc3.png" alt="wireframe 2"> -->
+</div>
 
 <div class="break-down-container">
 	<div class="break-down-heading">
@@ -450,7 +450,7 @@
           <div class="break-down-text">
             <div class="break-down-title">Prototype</div>
             <div class="break-down-description">
-              After finalizing the ideas generated in the wireframes, we built our prototype. This prototype contains the pages relevant to each of the use cases since we would use it for subsequent usability tests.
+              At this point in the process, we're increasing fidelity, moving from wireframes to mockups. After finalizing the ideas generated in the wireframes, we built our prototype. This prototype contains the pages relevant to each of the use cases since we would use it for subsequent usability tests.
           </div></div>
   </div>
 </div>
@@ -497,16 +497,18 @@
         </div>
     </div></div></div>
 
-    <div class="process-row">
-      <a class="back_home" href="index.html"><button type="button" class="btn btn-outline-white back_home_button">Back Home</button></a></div>
+    <div class="break-down-container">
+    <div class="break-down-row">
+      <a class="back_home" href="index.html"><button type="button" class="btn btn-outline-white back_home_button">Back Home</button></a></div></div>
 
         <!-- Footer -->
+        <div class="break-down-container">
+        <div class="break-down-row">
         <footer class="footer navbar-light bg-light">
-          <div class="process-row">
           <a target="_blank"href="https://www.linkedin.com/in/nehalj98/"><i class="fab fa-linkedin-in"></i></a>
           <a href="mailto:nnjain@ucdavis.edu"><i class="fas fa-envelope"></i></a>
-          </div>
-      </footer>
+      </footer></div></div>
+
         <!-- <footer class="footer navbar-light bg-light">
             <div class="break-down-container text-center">
             <a target="_blank"href="https://www.linkedin.com/in/nehalj98/"><i class="fab fa-linkedin-in"></i></a>
