--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <div id="explored_image" class="module_image"></div>
             
                             <div class="module_description" id="explored_module_description">
-                            <span class="project_module_text" id="explored_module_label">Facetime<br>Redesign</span>
+                            <span class="project_module_text" id="explored_module_label">Spotify <br>Redesign</span>
                             </div>
             
                         </div>
