--- a/dcc.html
+++ b/dcc.html
@@ -482,7 +482,7 @@
     <div class="storyline-title">Reflection</div>
     <div class="break-down-row">
         <div class="break-down-text">
-              <div class="process-heading">The Fun Part: Iterate, Usability Tests, Repeat</div>
+          <div class="break-down-title">Looking Forward</div>
               <div class="process-description">
                   For each of our focus areas of the app, we all conducted usability testing and continued iterating until reaching the product's final forms.
                   <br><br>
