--- a/dcc.html
+++ b/dcc.html
@@ -420,9 +420,10 @@
 
 <div class="break-down-container">
 			<div class="break-down-row">
-				<!-- <div class="final-gif">
-					<img src="images/JAPA/Prototyping/driver-safety-gif.gif" alt="driver safety gif">
-				</div> -->
+				<div class="final-giff">
+          <img src="img/dccwire.png" alt="DCC Wireframe 1">
+          <img src="img/dccwire2.png" alt="DCC Wireframe 2">
+				</div>
 
 				<div class="break-down-text">
 					<div class="break-down-title">Wireframes</div>
@@ -460,46 +461,21 @@
   <video class="final-gif" style="height: 706px;" autoplay><source src="img/dcc.mp4" type="video/mp4"></video>
 </div></div>
 
-
-<div class="break-down-container">
-			<div class="break-down-row">
-				<!-- <div class="final-gif">
-					<img src="images/JAPA/Prototyping/driver-safety-gif.gif" alt="driver safety gif">
-				</div> -->
-
-				<div class="break-down-text">
-					<div class="break-down-title">Usability Testing</div>
-					<div class="break-down-description">
-            After inserting, removing, and rearranging pages on the sitemap the team was able to start sketching new website layouts. As we sketched and wireframed, we explored layouts that followed existing common patterns, but also explored new features to give the design an edge.During the wireframing process, we decided that it was important to focus on the social features that allow sharing and reacting. We also incorporated a modern redesign which would reduce their cognitive load. Abiding by stylistic standards was significant to gaining the traction and audience that we wanted.
-					</div>
-				</div>
-			</div>
-</div>
-
 <div class="break-down-container">
   <div class="break-down-heading">
     <div class="small-text-title">What did I learn?</div>
     <div class="storyline-title">Reflection</div>
     <div class="break-down-row">
-        <div class="break-down-text">
-          <div class="break-down-title">Looking Forward</div>
-              <div class="process-description">
-                  For each of our focus areas of the app, we all conducted usability testing and continued iterating until reaching the product's final forms.
-                  <br><br>
-                  I'll be focusing on what I did in this section.
-                  I built off the original app's bare bones structure and designed an interactive parking facility layout. After I went through several iterations of wireframes and mid-fidelity prototypes and
-                  incorporated feedback from the team, I prepared some high-fidelity prototypes for A/B and usability testing.
+      <div class="breakk-down-text">
+        <div class="break-down-title">Looking Forward</div>
+          In the end, the succession of leadership is responsible for the continuation of the website. We took on the responsibility of creating the website based on user research. We still feel that the organisation should do a lot more research into design systems because there was an overwhelming number of synonymous design patterns for club organisations. Moreover, we would have preferred to code the website as we had the skills but unfortunately we decided to go with Weebly so that it is easy to edit for the future board members. We think that the website will benefit from being coded and hosted. The interaction and animation will improve the website. It is important to understand the limits and parameters of a project and we respected the criterion.
+      </div>
+    </div></div>
 
-              </div>
-        </div>
-        <div class="process-img">
-            <img src="images/JAPA/Prototyping/iterations.png" alt="iterations overview">
-        </div>
-    </div></div></div>
-
-    <div class="break-down-container">
     <div class="break-down-row">
-      <a class="back_home" href="index.html"><button type="button" class="btn btn-outline-white back_home_button">Back Home</button></a></div></div>
+      <a class="back_home" href="index.html"><button type="button" class="btn btn-outline-white back_home_button">Back Home</button></a></div>
+  
+    </div>
 
         <!-- Footer -->
         <div class="break-down-container">
