--- a/healthcave.html
+++ b/healthcave.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="assets/bootstrap-4.4.1-dist/css/bootstrap.css">
 
   <!-- Page Specific Styles -->
-  <link rel="stylesheet" type="text/css" href="styles/dhousing_styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/hc_styles.css">
 
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
