--- a/explored.html
+++ b/explored.html
@@ -86,7 +86,7 @@
 					<div class="detail-container">
 							<div class="detail-title">Tools</div>
 							<div class="emoji-img">✒️</div>
-							<div class="details-description">Sketch<br>InVision</div>
+							<div class="details-description">Adobe XD<br>InVision</div>
 					</div>
 		</div>
 
@@ -129,7 +129,7 @@
       <div class="small-process-title">Problem Space</div>
       <div class="main-step-title">Why does Spotify need this feature?</div>
           <div class="step-descriptionn">
-            This feature is required because the collaborative feature has some shortcomings. Making a collaborative playlist takes a lot of steps, and some users have no idea what they can do with the "make collaborative" button. Since you need more effort and time, users tend to be stressed about the social implications of the added songs. Moreover, this feature will help people test the waters before using collaborative playlists which stay in your library.
+            Every time my friends and I are together, the music listening experience is mostly terrible. People argue over song sleections and whose music will be queued next. Making a collaborative playlist takes a lot of steps, and some users have no idea what they can do with the "make collaborative" button. Since you need more effort and time, users tend to be stressed about the social implications of the added songs. Moreover, this feature will help people test the waters before using collaborative playlists which stay in your library.
             <div class="step-descriptionn-img">
               <img src="img/music.png" alt="animated website imagery">
             </div>
@@ -142,7 +142,8 @@
 <div class="opportunity-container">
   <div class="small-text-title">Space for opportunity</div>
   <div class="problem-title">What if we focused on allowing customers to collaborate short-term?</div>
-      Since creating a collaborative playlist takes time and effort, I decided to create a short-term feature that would take the pressure out of this situation for the users. Moreover, users will be able to assemble songs catered towards a specific vibe that they are going for at that moment.
+      Since creating a collaborative playlist takes time and effort, I decided to create a short-term feature that would take the pressure out of this situation for the users. Moreover, users will be able to assemble songs catered towards a specific vibe that they are going for at that moment. This would improve every group hangout and event.
+
 </div>
 
 
@@ -150,7 +151,7 @@
 		<div class="storyline">
 				<div class="storyline-title">The Solution</div>
 				<div class="storyline-description">
-          The Assemble feature would allow users to create a group in which every member could add songs to and play from the same queue. Besides providing users with an easy collaborative music streaming experience, it would also help Spotify increase its social currency because more people would want to use spotify to be able to play their songs in a group setting.
+          The Assemble feature would allow users to create a group in which every member could add songs to and play from the same queue. Besides providing users with an easy collaborative music streaming experience, it would also help Spotify increase its social currency because more people would want to use spotify to be able to play their songs in a group setting. 
 				</div>
 		</div>
 		<div class="redesign-banner">
