--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     </div>
 
                     <div class="col-md-6   col-12   module_wrapper">
-                        <a class="module_link" id="ui_module_description" href="explored">
+                        <a class="module_link" id="ui_module_description" href="uipsych">
                         <div class="module" data-aos="fade-up">
                             <div id="ui_image" class="module_image"></div>
             
