--- a/healthu.html
+++ b/healthu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Nehal Jain | Portfolio | DCC Website Design</title>
+	<title>Nehal Jain | Portfolio | Health U App Design</title>
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -62,13 +62,13 @@
           <div id="project-date">September - November 2020</div>
           <div id="project-title">Designing A New Medical Experience</div>
           <div id="project-description">
-            <a target=”_blank”  href = "https://designcareersclub.org/">Health Cave</a> is an app that allows customers to differentiate between COVID 19 and other types of virals. Through this app, users will be able to input their symptoms and the app will generate a repsonse that illustrates the likelihood of the specific disease.
+            <a target=”_blank”>Health U</a> is an app that allows customers to differentiate between COVID 19 and other types of virals. Through this app, users will be able to input their symptoms and the app will generate a repsonse that illustrates the likelihood of the specific disease.
           </div>
     </div>
 </div>
         
 <div class="bg-img">
-  <img src="img/dcc4.png" alt="dcc-banner">
+  <img src="img/healthcave.png" alt="healthU-banner">
 </div>
 
 
