--- a/dcc.html
+++ b/dcc.html
@@ -390,7 +390,10 @@
 	</div>
 				
         <div class="break-down-row">
-          <div class="break-down-text">
+          <div class="final-giff">
+            <img src="img/dcc-ia.svg" alt="DCC IA Design">
+          </div>
+          <div class="break-downn-text">
             <div class="break-down-title">Information Architecture</div>
             <div class="break-down-description">
               Organizing and grouping user flows for effecient navigation.
@@ -404,12 +407,12 @@
             </div></div>
         </div>
 
-        <div class="final-gif">
+        <!-- <div class="final-gif">
           <img src="img/dcc-ia.svg" alt="DCC IA Design">
-        </div>
+        </div> -->
 
         <div class="break-down-row">
-          <div class="break-down-text">
+          <div class="breakk-down-text">
               <div class="break-down-description">
                 Since students are the majority of the user population, we made sure that all of the information that they need is within the “Academics” section because that’s where they tend to look first (based off of our interview observations). To do this, we regrouped and added some relevant pages to the section. Previously, academic information was scattered outside of “Academics” in sections like “About” and “Programs & Services”. Now, more relevant information is in the section, and as seen in the revised sitemap, more students’ use cases fall in “Academics”.
                     
@@ -425,7 +428,7 @@
           <img src="img/dccwire2.png" alt="DCC Wireframe 2">
 				</div>
 
-				<div class="break-down-text">
+				<div class="break-downn-text">
 					<div class="break-down-title">Wireframes</div>
 					<div class="break-down-description">
             We wanted to connect the site's information architecture to its visual design by showing paths between pages. Wireframing aided us in clarifying consistent ways for displaying particular types of information on the user interface. As you can see from the sketches, we explored intended functionality in the interface and worked on different landing pages. Our main focus was on the home page because there isn't a lot of information so we wanted to gain and keep attention for the users to be able to reach the destination they wanted.
@@ -448,7 +451,7 @@
 	</div>
 
         <div class="break-down-row">
-          <div class="break-down-text">
+          <div class="breakk-down-text">
             <div class="break-down-title">Prototype</div>
             <div class="break-down-description">
               At this point in the process, we're increasing fidelity, moving from wireframes to mockups. After finalizing the ideas generated in the wireframes, we built our prototype. This prototype contains the pages relevant to each of the use cases since we would use it for subsequent usability tests.
