--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     </div>
 
                     <div class="col-md-6   col-12   module_wrapper">
-                        <a class="module_link" id="explored_module_description" href="explored">
+                        <a class="module_link" id="explored_module_description" href="assemble">
                         <div class="module" data-aos="fade-up">
                             <div id="explored_image" class="module_image"></div>
             
